--- a/roles/epsilon/files/opt/docker-compose.yml
+++ b/roles/epsilon/files/opt/docker-compose.yml
@@ -14,12 +14,12 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
   plexpy:
-    image: linuxserver/plexpy
-    container_name: plexpy
+    image: linuxserver/tautulli
+    container_name: tautulli
     depends_on:
       - plex
     volumes:
-      - /opt/appdata/plexpy:/config
+      - /opt/appdata/tautulli:/config
       - /opt/appdata/plex/Library/Application\ Support/Plex\ Media\ Server/Logs:/logs:ro
     ports:
       - 27029:8181
