--- a/roles/epsilon/files/opt/docker-compose.yml
+++ b/roles/epsilon/files/opt/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: plex
     volumes:
       - /opt/appdata/plex:/config
-      - /mnt/storage:/data
+      - /mnt/storage_damaged:/data
     network_mode: host
     restart: always
     environment:
@@ -36,7 +36,7 @@ services:
       - plex
     volumes:
       - /opt/appdata/ombi:/config
-      - /mnt/storage/tv:/tv
+      - /mnt/storage_damaged/tv:/tv
     ports:
       - 27026:3000
     links:
@@ -50,9 +50,9 @@ services:
     container_name: sonarr
     volumes:
       - /opt/appdata/sonarr:/config
-      - /mnt/storage/tv:/tv
-      - /mnt/disk1/downloads/complete/tv:/downloads
-      - /mnt/storage/downloads/complete/tv_import:/tv_import
+      - /mnt/storage_damaged/tv:/tv
+      - /mnt/disk2/downloads/complete/tv:/downloads
+      - /mnt/storage_damaged/downloads/complete/tv_import:/tv_import
     ports:
       - 27021:8989
     restart: always
@@ -64,8 +64,8 @@ services:
     container_name: couchpotato
     volumes:
       - /opt/appdata/couchpotato:/config
-      - /mnt/disk1/downloads/complete/movies:/downloads
-      - /mnt/storage/movies:/movies
+      - /mnt/disk2/downloads/complete/movies:/downloads
+      - /mnt/storage_damaged/movies:/movies
     ports:
       - 27022:5050
     restart: always
@@ -78,8 +78,8 @@ services:
     network_mode: host
     volumes:
       - /opt/appdata/deluge:/config
-      - /mnt/disk1/downloads:/downloads
-      - /mnt/storage:/mnt/storage
+      - /mnt/disk2/downloads:/downloads
+      - /mnt/storage_damaged:/mnt/storage
     restart: always
     environment:
       - PUID=${PUID}
@@ -101,8 +101,8 @@ services:
     container_name: radarr
     volumes:
       - /opt/appdata/radarr:/config
-      - /mnt/storage/movies:/movies
-      - /mnt/disk1/downloads/complete/movies:/downloads
+      - /mnt/storage_damaged/movies:/movies
+      - /mnt/disk2/downloads/complete/movies:/downloads
     ports:
       - 7878:7878
     environment:
@@ -135,7 +135,7 @@ services:
       - 4040:4040
     volumes:
       - /opt/appdata/airsonic:/config
-      - /mnt/storage/music/flac:/music/flac
+      - /mnt/storage_damaged/music/flac:/music/flac
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
